--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,3 +94,37 @@ html{
           font-size: 1.5rem;
       }
   }
+
+  /*Badge*/
+  .badge{
+      border-radius: 20px;
+      font-size: 2rem;
+      font-weight: 600;
+      padding: 0.5rem 2rem;
+      white-space: nowrap;
+  }
+  
+  .badge_primary{
+      background: var(--color-primary);
+      color: #fff;
+  }
+
+  .badge_secondary{
+      background: var(--color-secondary);
+      color: #fff;
+  }
+
+  .badge_small{
+      padding: 0.5rem 1.5rem;
+      font-size: 1.6rem;
+  }
+
+  @media screen and (min-width: 1024px) {
+      .badge{
+          font-size: 1.5rem;
+      }
+
+      .badge_small{
+          font-size: 1.2rem;
+      }
+  }
