--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,3 +128,31 @@ html{
           font-size: 1.2rem;
       }
   }
+
+  /*Lists*/
+  .list{
+      list-style: none;
+      padding-left: 0;
+  }
+
+  .list_inline .list_item{
+      display: inline;
+      margin-right: 2rem;
+  }
+
+  .list_tick{
+      list-style-image: url(/images/tick.svg);
+      padding-left: 3rem;
+      color: var(--color-headings);
+  }
+
+  .list_tick .list_item{
+      margin-bottom: 1rem;
+      padding-left: 0.5rem;
+  }
+
+  @media screen and (min-width: 768px) {
+    .list_tick .list_item{
+        padding-left: 0;
+    }
+  }
