--- a/styles/styles.css
+++ b/styles/styles.css
@@ -193,3 +193,79 @@ html{
   .icon_container-accent{
       background-color: var(--color-accent);
   }
+
+  /*Button*/
+  .button{
+      text-transform: uppercase;
+      border-radius: 40px;
+      padding: 2rem 3rem;
+      cursor: pointer;
+      font-size: 1.8rem;
+      font-weight: 600;
+      border: 0;
+      outline: 0;
+      white-space: nowrap;
+      text-align: center;
+      margin: 1rem 0;
+  }
+
+  .button_primary{
+      background: var(--color-primary);
+      color: #fff;
+  }
+
+  .button_primary:hover{
+      background: #3a8ffd;
+  }
+
+  .button_secondary{
+      background: var(--color-secondary);
+      color: #fff;
+  }
+
+  .button_secondary:hover{
+      background: #05cdf0;
+  }
+
+  .button_accent{
+      background: var(--color-accent);
+      color: #fff;
+  }
+
+  .button_accent:hover{
+      background: #ec3000;
+  }
+
+  .button_outline{
+      background: #fff;
+      color: var(--color-headings);
+      border: 2px solid var(--color-headings);
+  }
+
+  .button_outline:hover{
+      background: var(--color-headings);
+      color: #fff;
+  }
+
+  .button_long{
+      padding-left: 6rem;
+      padding-right: 6rem;
+  }
+
+  .button_icon{
+      width: 2rem;
+      height: 2rem;
+      vertical-align: middle;
+      margin-right: 1rem;
+  }
+
+  .button_block{
+      width: 100%;
+      display: inline-block;
+  }
+
+  @media screen and (min-width: 768px) {
+      .button{
+          font-size: 1.5rem;
+      }
+  }
