--- a/styles/styles.css
+++ b/styles/styles.css
@@ -336,3 +336,56 @@ html{
   .card_secondary .badge_secondary{
       background: #02cdf1;
   }
+
+  /*Plan*/
+  .plan{
+      transition: transform 0.2s ease-out;
+  }
+  
+  .plan_name{
+      color: #fff;
+      font-size: 2.4rem;
+      font-weight: 500;
+      margin: 0;
+  }
+
+  .plan_price{
+      font-size: 6rem;
+  }
+
+  .plan_duration{
+      font-size: 2.4rem;
+      font-weight: 300;
+      opacity: 0.8;
+      margin-right: 1rem;
+  }
+
+  .plan_description{
+      font-size: 2.4rem;
+      font-weight: 300;
+      letter-spacing: 1px;
+      display: block;
+  }
+
+  .plan .list_item{
+      margin-bottom: 2rem;
+  }
+
+  @media screen and (min-width: 768px) {
+      .plan_name{
+          font-size: 1.4rem;
+      }
+
+      .plan_price{
+          font-size: 5rem;
+      }
+
+      .plan_duration{
+        font-size: 1.6rem;
+      }
+
+      .plan_description{
+          font-size: 1.7rem;
+      }
+      
+  }
