--- a/styles/styles.css
+++ b/styles/styles.css
@@ -339,9 +339,9 @@ html{
 
   /*Plan*/
   .plan{
-      transition: transform 0.2s ease-out;
+    transition: transform 0.2s ease-out;
   }
-  
+
   .plan_name{
       color: #fff;
       font-size: 2.4rem;
@@ -361,7 +361,7 @@ html{
   }
 
   .plan_description{
-      font-size: 2.4rem;
+      font-size: 2rem;
       font-weight: 300;
       letter-spacing: 1px;
       display: block;
@@ -370,6 +370,31 @@ html{
   .plan .list_item{
       margin-bottom: 2rem;
   }
+
+  .plan_popular .card_header{
+      position: relative;
+  }
+
+  .plan_popular .card_header::before{
+    content: url(/images/popular.svg);
+    width: 40px;
+    display: inline-block;
+    position: absolute;
+    right: 5%;
+    top: -6px;
+}
+
+.plan_popular{
+    transform: scale(1.1);
+}
+
+.plan:hover{
+    transform: scale(1.05);
+}
+
+.plan_popular:hover{
+    transform: scale(1.15);
+}
 
   @media screen and (min-width: 768px) {
       .plan_name{
