--- a/styles/styles.css
+++ b/styles/styles.css
@@ -396,21 +396,89 @@ html{
     transform: scale(1.15);
 }
 
-  @media screen and (min-width: 768px) {
-      .plan_name{
-          font-size: 1.4rem;
-      }
+@media screen and (min-width: 768px) {
+    .plan_name{
+        font-size: 1.4rem;
+    }
 
-      .plan_price{
-          font-size: 5rem;
-      }
+    .plan_price{
+        font-size: 5rem;
+    }
 
-      .plan_duration{
-        font-size: 1.6rem;
-      }
+    .plan_duration{
+      font-size: 1.6rem;
+    }
 
-      .plan_description{
-          font-size: 1.7rem;
-      }
-      
-  }
+    .plan_description{
+        font-size: 1.7rem;
+    }
+}
+
+/*Media*/
+.media{
+    display: flex;
+    margin-bottom: 4rem;
+}
+
+.media_title{
+    margin-top: 0;
+}
+
+.media_icon{
+    margin-top: 1rem;
+}
+
+.media_body{
+    margin: 0 2rem;
+}
+
+/*Quotes*/
+.quote{
+    font-style: italic;
+    font-size: 3rem;
+    line-height: 1.5;
+    color: var(--color-headings);
+}
+
+.quote_text::before{
+    content: open-quote;
+}
+
+.quote_text::after{
+    content: close-quote;
+}
+
+.quote_author{
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+
+.quote_organisation{
+   font-style: normal;
+   font-size: 2rem;
+   opacity: 0.8;
+   color: var(--color-headings);
+}
+
+.quote_line{
+    position: relative;
+    bottom: 12px;
+}
+
+@media screen and (min-width: 1024px) {
+    .quote {
+      font-size: 2rem;
+    }
+  
+    .quote_author{
+      font-size: 2.4rem;
+    }
+  
+    .quote_organisation {
+      font-size: 1.6rem;
+    }
+}
+
+/*Grid*/
