--- a/styles/styles.css
+++ b/styles/styles.css
@@ -482,3 +482,20 @@ html{
 }
 
 /*Grid*/
+.grid{
+    display: grid;
+}
+
+@media screen and (min-width:768px) {
+    .grid_1x2{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width:1024px) {
+    .grid_1x3{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/*Testimonial*/
