--- a/styles/styles.css
+++ b/styles/styles.css
@@ -608,3 +608,44 @@ html{
 }
 
 /*Block*/
+.container{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.block{
+    --padding-vertical: 6rem;
+    padding: var(--padding-vertical) 2rem;
+}
+
+.block_header{
+    text-align: center;
+    margin-bottom: 4rem;
+}
+
+.block_heading{
+    margin-top: 0;
+}
+
+.block_dark{
+    background: #000;
+    color: #7b858b;
+}
+
+.block_dark h1,
+.block_dark h2,
+.block_dark h3{
+    color: #fff;
+}
+
+.block_skewed-right {
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+}
+  
+.block_skewed-left {
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+}
+
+/*Nav bar*/
