--- a/components/block.html
+++ b/components/block.html
@@ -1,3 +1,12 @@
+<section class="block">
+  <header class="block_header">
+    <h2 class="block_heading">Heading</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, repellat.
+    </p>
+  </header>
+</section>
+
 <section class="block block_dark block_skewed-right">
   <header class="block_header">
     <h2 class="block_heading">Heading</h2>
