--- a/components/block.html
+++ b/components/block.html
@@ -1,5 +1,5 @@
 <section class="block">
-  <header class="block_header">
+  <header class="block_header container">
     <h2 class="block_heading">Heading</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, repellat.
@@ -8,10 +8,13 @@
 </section>
 
 <section class="block block_dark block_skewed-right">
-  <header class="block_header">
-    <h2 class="block_heading">Heading</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, repellat.
-    </p>
-  </header>
+  <div class="container">
+    <header class="block_header">
+      <h2 class="block_heading">Heading</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi,
+        repellat.
+      </p>
+    </header>
+  </div>
 </section>
