--- a/styles/styles.css
+++ b/styles/styles.css
@@ -610,6 +610,7 @@ html{
 /*Block*/
 .container{
     max-width: 1140px;
+    margin: 0 auto;
 }
 
 .block{
@@ -648,3 +649,67 @@ html{
 }
 
 /*Nav bar*/
+.nav{
+    background: #000;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+.nav_list{
+    width: 100%;
+    margin: 0;
+}
+
+.nav_item{
+    padding: 0.5rem 2rem;
+    border-bottom: 1px solid #222;
+}
+
+.nav_item > a{
+    color: #d2d0db;
+    transition: color 0.3s;
+}
+
+.nav_item > a:hover{
+    color: #fff;
+}
+
+.nav_toggler{
+    opacity: 0.5;
+    cursor: pointer;
+    transition: box-shadow 0.15s;
+}
+
+.nav.collapsible_expanded .nav_toggler{
+    opacity: 1;
+    box-shadow: 0 0 0 3px #666;
+    border-radius: 5px;
+}
+
+.nav_brand{
+    transform: translateY(5px);
+}
+
+@media screen and (min-width: 768px) {
+    .nav_toggler{
+        display: none;
+    }
+
+    .nav_list{
+        display: flex;
+        width: auto;
+        font-size: 1.6rem;
+        max-height: 100%;
+        opacity: 1;
+    }
+
+    .nav_item{
+        border: 0;
+    }
+}
+
+/*Hero*/
+
