--- a/styles/styles.css
+++ b/styles/styles.css
@@ -735,3 +735,38 @@ html{
 }
 
 /*Domain Block*/
+.block_domain .input_group{
+    max-width: 670px;
+    border: 0;
+    box-shadow: 0 0 30px 20px #e6ebee;
+    margin: 4rem auto;
+}
+
+.block_domain-prices{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 6rem);
+    font-size: 2rem;
+    font-weight: 600;
+    justify-items: center;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .block_domain-prices{
+        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    }
+}
+
+/*Plans Block*/
+.plans_block .grid{
+    gap: 8rem 4rem;
+}
+
+.plans_block .card{
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+/*Features*/
