--- a/styles/styles.css
+++ b/styles/styles.css
@@ -794,3 +794,24 @@ html{
 }
 
 /*Showcase Block*/
+.showcase_image > img{
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .showcase_block .grid{
+        grid-template-columns: repeat(2, 50%);
+        gap: 0 2rem;
+    }
+
+    .showcase_image{
+        justify-self: end;
+    }
+
+    .showcase_image > img{
+        width: auto;
+        max-width: 700px;
+    }
+}
+
+/*footer*/
