--- a/styles/styles.css
+++ b/styles/styles.css
@@ -815,3 +815,81 @@ html{
 }
 
 /*footer*/
+.footer{
+    background: #232323;
+}
+
+.footer a{
+    color: #777;
+    transition: color 0.3s;
+}
+
+.footer a:hover{
+    color: #fff;
+}
+
+.footer_section{
+    padding: 2rem;
+    border-bottom: 1px solid #393939;
+}
+
+.footer_section .list{
+    margin: 1rem;
+}
+
+.footer_heading{
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.footer_image{
+    margin-top: 5rem;
+    text-align: center;
+}
+
+.footer_image > img{
+    width: 100%;
+    max-width: 230px;
+}
+
+.footer_copyright{
+    font-size: 2.1rem;
+    color: #fff;
+    opacity: 0.3;
+}
+
+@media screen and (min-width:768px) {
+    .footer{
+        font-size: 1.5rem;
+    }
+
+    .footer_sections{
+        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    }
+
+    .footer .collapsible_icon{
+        display: none;
+    }
+
+    .footer_section{
+        border: 0;
+    }
+
+    .footer_heading{
+        font-size: 1.6rem;
+    }
+
+    .footer_copyright{
+        font-size: 1.5rem;
+    }
+
+    .footer .collapsible_content{
+        max-height: 100%;
+        opacity: 1;
+    }
+
+    .footer_image{
+        order: -1;
+        margin-top: 1rem;
+    }
+}
