--- a/components/button.html
+++ b/components/button.html
@@ -2,7 +2,7 @@
 <button class="button button_primary button_long">buy now</button>
 <a href="#" class="button button_accent">
   <svg class="icon icon_white button_icon">
-    <use xlink:href="images/sprite.svg#search"></use></svg
+    <use href="images/sprite.svg#search"></use></svg
   >Search</a
 >
 <button class="button button_secondary">Get started</button>
