--- a/components/input_group.html
+++ b/components/input_group.html
@@ -2,7 +2,7 @@
   <input class="input" type="text" placeholder="Enter domain name here..." />
   <button class="button button_accent">
     <svg class="icon icon_white button_icon">
-      <use xlink:href="images/sprite.svg#search"></use></svg
+      <use href="images/sprite.svg#search"></use></svg
     >Search
   </button>
 </div>
