--- a/components/collapsible.html
+++ b/components/collapsible.html
@@ -2,7 +2,7 @@
   <header class="collapsible_header">
     <h2 class="collapsible_heading">Item 1</h2>
     <svg class="icon icon_white collapsible_icon">
-      <use xlink:href="images/sprite.svg#chevron"></use>
+      <use href="images/sprite.svg#chevron"></use>
     </svg>
   </header>
   <div class="collapsible_content">
