--- a/components/feature_block.html
+++ b/components/feature_block.html
@@ -9,7 +9,7 @@
     <div class="feature_content">
       <span class="icon_container">
         <svg class="icon icon_primary">
-          <use xlink:href="images/sprite.svg#easy"></use>
+          <use href="images/sprite.svg#easy"></use>
         </svg>
       </span>
       <h3 class="feature_heading">Super Easy to use</h3>
@@ -36,7 +36,7 @@
     <div class="feature_content">
       <span class="icon_container">
         <svg class="icon icon_primary">
-          <use xlink:href="images/sprite.svg#computer"></use>
+          <use href="images/sprite.svg#computer"></use>
         </svg>
       </span>
       <h3 class="feature_heading">Simply fast websites</h3>
@@ -63,7 +63,7 @@
     <div class="feature_content">
       <span class="icon_container">
         <svg class="icon icon_primary">
-          <use xlink:href="images/sprite.svg#settings"></use>
+          <use href="images/sprite.svg#settings"></use>
         </svg>
       </span>
       <h3 class="feature_heading">Wordpress made easy</h3>
@@ -90,7 +90,7 @@
     <div class="feature_content">
       <span class="icon_container">
         <svg class="icon icon_primary">
-          <use xlink:href="images/sprite.svg#clock"></use>
+          <use href="images/sprite.svg#clock"></use>
         </svg>
       </span>
       <h3 class="feature_heading">24/7 Expert support</h3>
