--- a/components/footer_block.html
+++ b/components/footer_block.html
@@ -4,7 +4,7 @@
       <header class="collapsible_header">
         <h2 class="collapsible_heading footer_heading">Products</h2>
         <svg class="icon icon_white collapsible_icon">
-          <use xlink:href="images/sprite.svg#chevron"></use>
+          <use href="images/sprite.svg#chevron"></use>
         </svg>
       </header>
       <div class="collapsible_content">
@@ -21,7 +21,7 @@
       <header class="collapsible_header">
         <h2 class="collapsible_heading footer_heading">Company</h2>
         <svg class="icon icon_white collapsible_icon">
-          <use xlink:href="images/sprite.svg#chevron"></use>
+          <use href="images/sprite.svg#chevron"></use>
         </svg>
       </header>
       <div class="collapsible_content">
@@ -40,7 +40,7 @@
       <header class="collapsible_header">
         <h2 class="collapsible_heading footer_heading">Support</h2>
         <svg class="icon icon_white collapsible_icon">
-          <use xlink:href="images/sprite.svg#chevron"></use>
+          <use href="images/sprite.svg#chevron"></use>
         </svg>
       </header>
       <div class="collapsible_content">
@@ -58,7 +58,7 @@
       <header class="collapsible_header">
         <h2 class="collapsible_heading footer_heading">Domains</h2>
         <svg class="icon icon_white collapsible_icon">
-          <use xlink:href="images/sprite.svg#chevron"></use>
+          <use href="images/sprite.svg#chevron"></use>
         </svg>
       </header>
       <div class="collapsible_content">
