--- a/components/icon.html
+++ b/components/icon.html
@@ -1,5 +1,5 @@
 <span class="icon_container">
   <svg class="icon icon_primary">
-    <use xlink:href="images/sprite.svg#wordpress"></use>
+    <use href="images/sprite.svg#wordpress"></use>
   </svg>
 </span>
