--- a/components/media.html
+++ b/components/media.html
@@ -1,7 +1,7 @@
 <div class="media">
   <div class="media_icon">
     <svg class="icon icon_primary">
-      <use xlink:href="images/sprite.svg#snap"></use>
+      <use href="images/sprite.svg#snap"></use>
     </svg>
   </div>
   <div class="media_body">
@@ -16,7 +16,7 @@
 <div class="media">
   <div class="media_icon">
     <svg class="icon icon_primary">
-      <use xlink:href="images/sprite.svg#growth"></use>
+      <use href="images/sprite.svg#growth"></use>
     </svg>
   </div>
   <div class="media_body">
@@ -31,7 +31,7 @@
 <div class="media">
   <div class="media_icon">
     <svg class="icon icon_primary">
-      <use xlink:href="images/sprite.svg#wordpress"></use>
+      <use href="images/sprite.svg#wordpress"></use>
     </svg>
   </div>
   <div class="media_body">
