--- a/components/nav.html
+++ b/components/nav.html
@@ -1,7 +1,7 @@
 <nav class="nav collapsible collapsible_expanded">
   <a class="nav_brand" href="#"><img src="/images/logo.svg" alt="" /></a>
   <svg class="icon icon_white nav_toggler">
-    <use xlink:href="images/sprite.svg#menu"></use>
+    <use href="images/sprite.svg#menu"></use>
   </svg>
   <ul class="list collapsible_content nav_list">
     <li class="nav_item"><a href="#">Hosting</a></li>
