--- a/components/quote.html
+++ b/components/quote.html
@@ -8,7 +8,7 @@
     <div class="media">
       <div class="media_icon">
         <svg class="icon icon_primary quote_line">
-          <use xlink:href="images/sprite.svg#line"></use>
+          <use href="images/sprite.svg#line"></use>
         </svg>
       </div>
       <div class="media_body">
