--- a/components/showcase_block.html
+++ b/components/showcase_block.html
@@ -19,7 +19,7 @@
         <div class="media">
           <div class="media_icon">
             <svg class="icon icon_primary">
-              <use xlink:href="images/sprite.svg#snap"></use>
+              <use href="images/sprite.svg#snap"></use>
             </svg>
           </div>
           <div class="media_body">
@@ -36,7 +36,7 @@
         <div class="media">
           <div class="media_icon">
             <svg class="icon icon_primary">
-              <use xlink:href="images/sprite.svg#growth"></use>
+              <use href="images/sprite.svg#growth"></use>
             </svg>
           </div>
           <div class="media_body">
@@ -53,7 +53,7 @@
         <div class="media">
           <div class="media_icon">
             <svg class="icon icon_primary">
-              <use xlink:href="images/sprite.svg#wordpress"></use>
+              <use href="images/sprite.svg#wordpress"></use>
             </svg>
           </div>
           <div class="media_body">
