--- a/components/testimonial_block.html
+++ b/components/testimonial_block.html
@@ -12,7 +12,7 @@
           <img src="/images/testimonial.jpg" alt="A happy man" />
           <span class="icon_container icon_container-accent">
             <svg class="icon icon_white">
-              <use xlink:href="images/sprite.svg#quotes"></use>
+              <use href="images/sprite.svg#quotes"></use>
             </svg>
           </span>
         </div>
@@ -26,7 +26,7 @@
             <div class="media">
               <div class="media_icon">
                 <svg class="icon icon_primary quote_line">
-                  <use xlink:href="images/sprite.svg#line"></use>
+                  <use href="images/sprite.svg#line"></use>
                 </svg>
               </div>
               <div class="media_body">
