--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,10 @@ html{
     color: #fff;
   }
 
+  html,body{
+    overflow-x: hidden;
+  }
+
   body{
       font-family: Inter, Arial, Helvetica, sans-serif;
       font-size: 2.4rem;
