add parcel for building

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -314,10 +314,12 @@ html{
       }
   }
 
-  /*Card*/
+  /*Card
+  */
   .card{
       border-radius: 7px;
       box-shadow: 0 0 20px 10px #f3f3f3;
+      overflow: hidden;
   }
 
   .card_header,
